--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.36",
     "prefixfree": "^1.0.0",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1"
   }
